# meeting-summarizer-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/: workflows.yml
.github/workflows/: main.yml
templates/: prompt_template.txt
